--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -37,6 +37,15 @@
     }
   }
 
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary;
+    }
+  }
+
   /* Makes button bigger when hover */
   &::after {
     position: absolute;
