--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,8 @@
 
 @import "components/buttons";
 @import "components/compositions";
+@import "components/feature-box";
+@import "components/card";
 
 @import "layout/grid";
 @import "layout/header";
