--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,20 @@ body {
 .u-margin-bottom-small {
   margin-bottom: 1.5rem; }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: .15;
+  overflow: hidden; }
+  .bg-video__content {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
+
 .btn {
   /* Makes button bigger when hover */ }
   .btn:link, .btn:visited {
@@ -115,7 +129,7 @@ body {
     font-size: 1.6rem;
     text-transform: uppercase;
     text-decoration: none;
-    transition: all 0.2s; }
+    transition: all .2s; }
   .btn:hover {
     transform: translateY(-0.3rem);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
@@ -214,6 +228,51 @@ body {
     color: transparent;
     font-size: 6rem; }
 
+.story {
+  width: 75%;
+  margin: 0 auto;
+  border-radius: 3px;
+  padding: 6rem;
+  padding-left: 9rem;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 0.5);
+  font-size: 1.6rem;
+  transform: skewX(-12deg); }
+  .story__shape {
+    position: relative;
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    shape-outside: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    transform: translateX(-3rem) skewX(12deg); }
+  .story__img {
+    height: 100%;
+    transform: translateX(-4rem) scale(1.4);
+    backface-visibility: hidden;
+    transition: all .5s; }
+  .story__text {
+    transform: skewX(12deg); }
+  .story__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    opacity: 0;
+    transition: all .5s;
+    backface-visibility: hidden;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    text-align: center; }
+  .story:hover .story__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%); }
+  .story:hover .story__img {
+    transform: translateX(-4rem) scale(1);
+    filter: blur(3px) brightness(80%); }
+
 .card {
   position: relative;
   height: 52rem;
@@ -246,6 +305,8 @@ body {
     transform: rotateY(0); }
   .card__picture {
     height: 23rem;
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
     background-size: cover;
     background-blend-mode: screen;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
@@ -370,5 +431,9 @@ body {
 
 .section-tours {
   margin-top: -10rem;
-  padding: 25rem 0 50rem 0;
+  padding: 25rem 0 15rem 0;
   background-color: #f7f7f7; }
+
+.section-stories {
+  position: relative;
+  padding: 15rem 0; }
