--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,9 +7,11 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/bg-video";
 @import "components/buttons";
 @import "components/compositions";
 @import "components/feature-box";
+@import "components/story";
 @import "components/card";
 
 @import "layout/grid";
