--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -28,7 +28,12 @@
 
 .section-tours {
   margin-top: -10rem;
-  padding: 25rem 0 50rem 0;
+  padding: 25rem 0 15rem 0;
 
   background-color: $color-gray-light-1;
+}
+
+.section-stories {
+  position: relative;
+  padding: 15rem 0;
 }
