--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,5 +1,6 @@
 .btn {
 
+  &,
   &:link,
   &:visited {
     position: relative;
@@ -11,6 +12,10 @@
     text-transform: uppercase;
     text-decoration: none;
     transition: all .2s;
+
+    // Change for the <button> element
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -23,14 +28,16 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(-1px);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
 
   &--white {
     background-color: $color-white;
-    color: $color-gray-dark;
+    color: $color-grey-dark-1;
 
     &::after {
       background-color: $color-white;
