--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,11 +9,13 @@
 
 @import "components/bg-video";
 @import "components/buttons";
+@import "components/card";
 @import "components/compositions";
 @import "components/feature-box";
+@import "components/form";
 @import "components/story";
-@import "components/card";
 
+@import "layout/footer";
 @import "layout/grid";
 @import "layout/header";
 
