--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/*
+  0 - 600        :PHONE
+  600 - 900      :TABLET PORTRAIT
+  900 - 1200     :TABLET LANSCAPE
+  1200 - 1800    :DESKTOP
+  1800+          :SUPER DESKTOP
+*/
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -35,6 +42,18 @@
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 37.5em) {
+    html {
+      font-size: 50%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 60%; } }
+  @media (max-width: 75em) {
+    html {
+      font-size: 70%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 80%; } }
 
 body {
   padding: 3rem;
