--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,8 +7,27 @@
 }
 
 html {
-  // This define what 1rem is
+  // This define what 1rem  10px
   font-size: 62.5%;
+
+  @include respond(phone) {
+
+    font-size: 50%;
+  }
+
+  @include respond(tab-port) {
+    // 1rem = 9px
+    font-size: 60%;
+  }
+
+  @include respond(tab-land) {
+    // 1rem = 8px, 8/16 = 50%
+    font-size: 70%;
+  }
+
+  @include respond(big-desktop) {
+    font-size: 80%;
+  }
 }
 
 body {
