--- a/css/style.css
+++ b/css/style.css
@@ -523,6 +523,7 @@ body {
     transform: translate(-50%, -50%);
     display: table;
     width: 75%;
+    max-height: 20rem;
     background-color: #fff;
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
     border-radius: 3px;
@@ -533,18 +534,28 @@ body {
   .popup__left {
     display: table-cell;
     width: 33.333333%; }
+    @media (max-width: 56.25em) {
+      .popup__left {
+        display: none;
+        visibility: hidden; } }
   .popup__right {
     display: table-cell;
     vertical-align: middle;
     width: 66.6666667%;
-    padding: 3rem 5rem;
+    padding: 3rem 3rem;
     position: relative; }
+    .popup__right .heading-secondary {
+      padding-left: 0; }
+    @media (max-width: 56.25em) {
+      .popup__right .btn--green {
+        font-size: 1.5rem;
+        padding: 1.5rem 3rem; } }
   .popup__img {
     display: block;
     width: 100%; }
   .popup__text {
     margin-bottom: 4rem;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     -moz-column-count: 2;
     -moz-column-gap: 4rem;
     -moz-column-rule: 1px solid #eee;
@@ -555,6 +566,13 @@ body {
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto; }
+    @media (max-width: 56.25em) {
+      .popup__text {
+        margin-bottom: 2rem; } }
+    @media (max-width: 37.5em) {
+      .popup__text {
+        -moz-column-count: 1;
+        column-count: 1; } }
   .popup:target {
     opacity: 1;
     visibility: visible; }
@@ -834,6 +852,12 @@ body {
   .navigation__link:link span, .navigation__link:visited span {
     margin-right: 1.5rem;
     display: inline-block; }
+  @media (max-width: 56.25em) {
+    .navigation__link:link, .navigation__link:visited {
+      font-size: 2.5rem; } }
+  @media (max-width: 37.5em) {
+    .navigation__link:link, .navigation__link:visited {
+      font-size: 2.2rem; } }
 
 .navigation__link:hover, .navigation__link:active {
   background-position: 100%;
