--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -98,6 +98,14 @@
         margin-right: 1.5rem;
         display: inline-block;
       }
+
+      @include respond(tab-port) {
+        font-size: 2.5rem;
+      }
+
+      @include respond(phone) {
+        font-size: 2.2rem;
+      }
     }
 
     &:hover,
