--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -18,6 +18,7 @@
 
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
     transition: all .8s ease;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 
     &--front {
@@ -177,6 +178,7 @@
 
       &--back {
         transform: rotateY(0);
+        -webkit-clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
         clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
       }
     }
