--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -28,9 +28,11 @@
     float: left;
 
     // Text circle outside along the picture shape
+    -moz-shape-outside: circle(50% at 50% 50%);
     -webkit-shape-outside: circle(50% at 50% 50%);
     shape-outside: circle(50% at 50% 50%);
 
+    -webkit-clip-path: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
     transform: translateX(-3rem) skewX(12deg);
 
